2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* drw-selection.c: (drw_selection_start): ANSIfication.
	* drwright.c: NULL vs. 0

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-10-14  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Remove unecessary
	frame, fixes a bug with the transparent background.

2004-07-28  Richard Hult  <richard@imendio.com>

	* drw-break-window.c: Patch from Markus Berg <mberg@hp.com> to fix
	bug #123141.

	* drwright.c: Remove some cruft. Shorten the warning period a bit.

2004-05-02  Richard Hult  <richard@imendio.com>

	* drw-monitor.c Raise the threshold for detecting activity, makes
	totem not trigger typing breaks. Fixes bug #121876.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-17  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Don't make the
	postpone button focused right away, makes the fix for #126179 a
	lot better.

	* drwright.c: Don't create break window if we already have one,
	fixes bug #134455. Don't make about box modal, fixes bug #134594.

	* main.c (main): Remove unused variable.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-01  Richard Hult  <richard@imendio.com>

	Fixes bug #126179:
	
	* drw-break-window.c (drw_break_window_init): Add mnemonic to
	postpone button.

	* drwright.c (maybe_change_state): Grab keyboard so the mnemonic
	actually works.

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0
